# adb-fix

./: .env.example  .gitignore  BUILD_REPORT.md  CLAUDE.md  INFRA_BACKLOG_HANDOFF.md  KNOWN_ISSUES.md  LICENSE  README.md  bunfig.toml  package.json  tsconfig.json
BLUEPRINTS/: Bridge_Blueprint_1_Server_Core.docx  Bridge_Blueprint_1_Server_Core.md  Bridge_Blueprint_2_Integration_Layer.md
bridge/: APP_CODER_ADBPD_HANDOFF.md  BRANCH_README.md  HANDOFF.md
bridge/BLUEPRINTS/: Bridge_Blueprint_2_Integration_Layer.docx
docs/: 01-overview.md  02-architecture.md  03-build-history.md  03-protocol.md  04-disaster-recovery.md  05-operations.md
hooks/: session-start.ps1  stop.ps1  user-prompt-submit.ps1
launcher/: Cargo.toml
launcher/src/: main.rs
logs/: soak-2026-06-04T07-47-02-949Z-summary.md
scripts/: hook-drain-queue.ts  hook-fetch-summary.ts  install-mcp.ps1  install-service.ps1  p4-parallel.sh  p5-pin-test.ts  reset-adbpd.ps1  reset-bridge.ps1  set-service-env.ps1  smoke-ws.ts  soak.ts  spike-numa.ts  uninstall-service.ps1
src/: main.ts
src/api/: server.ts
src/client/: tui.tsx
src/dashboard/: dashboard.css  dashboard.js  index.html
src/db/: events.ts  schema.ts
src/emulator/: discover.ts  manager.ts  numa-pinner.ts
src/fm/: client.ts  telemetry.ts
src/lifecycle/: cleanup.ts
src/maestro/: cli.ts  port-manager.ts  process-wrapper.ts
templates/: adbpd.mcp.json  aegisrx.mcp.json  claude-desktop.config.json
tests/: broker.test.ts  hooks.test.ts  integration.test.ts  mcp.test.ts  protocol.test.ts  setup.ts  smoke-live.ts  store.test.ts  tui.test.ts
(+33 files in other folders)
