[package]
name = "adbpd-launcher"
version = "0.1.0"
edition = "2021"
description = "NSSM shim: spawns bun with restricted handle inheritance to prevent 5037 kernel zombies"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_JobObjects",
] }

[profile.release]
opt-level = "s"
strip = true
